<?xml version="1.0" encoding="UTF-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/coordinatorLayout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainActivity">

  <com.google.android.material.appbar.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.appbar.MaterialToolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?actionBarSize"/>
  </com.google.android.material.appbar.AppBarLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="horizontal">

      <com.google.android.material.textview.MaterialTextView
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:text="@string/colon_temperature"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"/>

      <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/desc_temperature"
        android:importantForAutofill="no"
        android:inputType="numberDecimal|numberSigned"/>
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="64dp"
      android:gravity="center"
      android:orientation="horizontal">

      <com.google.android.material.textview.MaterialTextView
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:text="@string/colon_unit"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"/>

      <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
          android:id="@+id/fahrenheitRadio"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:checked="true"
          android:onClick="calculate"
          android:text="@string/fahrenheit"/>

        <RadioButton
          android:id="@+id/celsiusRadio"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:onClick="calculate"
          android:text="@string/celsius"/>
      </RadioGroup>
    </LinearLayout>

    <ImageView
      android:id="@+id/image"
      android:layout_width="128dp"
      android:layout_height="128dp"
      android:contentDescription="@string/desc_season"
      android:src="@drawable/hi"/>

    <com.google.android.material.textview.MaterialTextView
      android:id="@+id/titleText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"/>

    <com.google.android.material.textview.MaterialTextView
      android:id="@+id/subtitleText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:gravity="center"
      android:text="@string/desc_welcome"
      android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"/>
  </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
